--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/styled": "^11.11.0",
     "@hookform/resolvers": "^3.3.3",
     "@mui/icons-material": "^5.15.2",
+    "@mui/lab": "^5.0.0-alpha.159",
     "@mui/material": "^5.15.2",
     "axios": "^1.6.2",
     "react": "^18.2.0",
